--- a/contact.html
+++ b/contact.html
@@ -2,21 +2,22 @@
 layout: default
 title: Contact
 description: Get in touch today with Christian Matt and connect here or via social media.
+image: contact.webp
 ---
 
 <div class="row">
-    <div class="col-lg-4">
+    <div class="col-lg-5">
         <ul class="list list-unstyled">
             <li class="list-item">Institute of Information Systems (IWI)</li>
             <li class="list-item">Engehaldenstrasse 8</li>
             <li class="list-item">CH-3012 Bern</li>
             <li class="list-item">Switzerland</li>
         </ul>
-        <i class="bi bi-telephone"> <a href="tel:+41 31 684 49 67">+41 31 684 49 67</a></i>
+        <i class="bi bi-telephone"> <a href="tel:+41 31 684 49 67" class="link">+41 31 684 49 67</a></i>
         <br>
-        <i class="bi bi-envelope"> <a href="mailto:christian.matt@iwi.unibe.ch">christian.matt@iwi.unibe.ch</a></i>
+        <i class="bi bi-envelope"> <a href="mailto:christian.matt@iwi.unibe.ch" class="link">christian.matt@iwi.unibe.ch</a></i>
     </div>
-    <div class="col-lg-8">
+    <div class="col-lg-7">
         <iframe src="https://maps.google.com/maps?q=Engehaldestrasse%208&amp;t=k&amp;z=16&amp;ie=UTF8&amp;iwloc=&amp;output=embed" id="map"></iframe>
     </div>
 </div>
