Increase loading speed of Google Maps iframe.

--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,6 @@ image: contact.webp
         <i class="bi bi-envelope"> <a href="mailto:christian.matt@iwi.unibe.ch" class="link">christian.matt@iwi.unibe.ch</a></i>
     </div>
     <div class="col-lg-7">
-        <iframe src="https://maps.google.com/maps?q=Engehaldestrasse%208&amp;t=k&amp;z=16&amp;ie=UTF8&amp;iwloc=&amp;output=embed" id="map"></iframe>
+        <iframe defer loading="lazy" src="https://maps.google.com/maps?q=Engehaldestrasse%208&amp;t=k&amp;z=16&amp;ie=UTF8&amp;iwloc=&amp;output=embed" id="map"></iframe>
     </div>
 </div>
