--- a/contact.html
+++ b/contact.html
@@ -1,21 +1,26 @@
 ---
 layout: default
 title: Contact
-description: Get in touch today with Christian Matt and connect here or via social media.
-image: contact.webp
+keywords: Christian Matt, Contact, Digital Transformation Strategy
+description: Get in touch with Christian Matt and connect here or via social media.
+image: contact.jpg
 ---
 
 <div class="row">
-    <div class="col-lg-5">
+    <div class="col-lg-5 pe-0">
+        <p>Get in touch with Christian Matt via one of the following options:</p>
         <ul class="list list-unstyled">
+            <li class="list-item">University of Bern</li>
             <li class="list-item">Institute of Information Systems (IWI)</li>
-            <li class="list-item">Engehaldenstrasse 8</li>
+            <li class="list-item">Engehaldenstrasse 8, Office 307</li>
             <li class="list-item">CH-3012 Bern</li>
             <li class="list-item">Switzerland</li>
         </ul>
-        <i class="bi bi-telephone"> <a href="tel:+41 31 684 49 67" class="link">+41 31 684 49 67</a></i>
+        <a href="tel:+41 31 684 49 67" class="link"><i class="bi bi-telephone icon-contact"></i>+41 31 684 49 67</a>
         <br>
-        <i class="bi bi-envelope"> <a href="mailto:christian.matt@iwi.unibe.ch" class="link">christian.matt@iwi.unibe.ch</a></i>
+        <a href="mailto:christian.matt@iwi.unibe.ch" class="link"><i class="bi bi-envelope icon-contact"></i>christian.matt@iwi.unibe.ch</a>
+        <br>
+        <a href="https://www.linkedin.com/in/christianmatt/" class="link"><i class="bi bi-linkedin icon-contact"></i>@christianmatt</a>
     </div>
     <div class="col-lg-7">
         <iframe defer loading="lazy" src="https://google.com/maps?q=Engehaldestrasse%208&t=k&z=16&ie=UTF8&output=embed" id="map"></iframe>
