Update content of research page.

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@ image: contact.jpg
         <br>
         <a href="mailto:christian.matt@iwi.unibe.ch" class="link"><i class="bi bi-envelope icon-contact"></i>christian.matt@iwi.unibe.ch</a>
         <br>
-        <a href="https://www.linkedin.com/in/christianmatt/" class="link"><i class="bi bi-linkedin icon-contact"></i>@christianmatt</a>
+        <a target="_blank" href="https://www.linkedin.com/in/christianmatt/" class="link"><i class="bi bi-linkedin icon-contact"></i>@christianmatt</a>
     </div>
     <div class="col-lg-7">
         <iframe defer loading="lazy" src="https://google.com/maps?q=Engehaldestrasse%208&t=k&z=16&ie=UTF8&output=embed" id="map"></iframe>
