Add picture and update style.

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@ layout: default
 title: Contact
 keywords: Christian Matt, Contact, Digital Transformation Strategy
 description: Get in touch with Christian Matt and connect here or via social media.
-image: contact.jpg
+image: contact.webp
 ---
 
 <div class="row">
