--- a/contact.html
+++ b/contact.html
@@ -12,13 +12,13 @@ image: contact.webp
         <ul class="list list-unstyled">
             <li class="list-item">University of Bern</li>
             <li class="list-item">Institute of Information Systems (IWI)</li>
-            <li class="list-item">Engehaldenstrasse 8, Office 307</li>
+            <li class="list-item">Engehaldenstr. 8, Office 307</li>
             <li class="list-item">CH-3012 Bern</li>
             <li class="list-item">Switzerland</li>
         </ul>
-        <a href="tel:+41 31 684 49 67" class="link"><i class="bi bi-telephone icon-contact"></i>+41 31 684 49 67</a>
-        <br>
         <a href="mailto:christian.matt@iwi.unibe.ch" class="link"><i class="bi bi-envelope icon-contact"></i>christian.matt@iwi.unibe.ch</a>
+        <br>
+        <a href="tel:+41 31 684 49 67" class="link"><i class="bi bi-telephone icon-contact"></i>+41 31 684 49 67</a>
         <br>
         <a target="_blank" href="https://www.linkedin.com/in/christianmatt/" class="link"><i class="bi bi-linkedin icon-contact"></i>@christianmatt</a>
     </div>
