--- a/contact.html
+++ b/contact.html
@@ -9,12 +9,12 @@ image: contact.webp
 <div class="row">
     <div class="col-lg-5 pe-0">
         <p>Get in touch with Christian Matt via one of the following options:</p>
-        <ul class="list list-unstyled">
-            <li class="list-item">University of Bern</li>
-            <li class="list-item">Institute of Information Systems (IWI)</li>
-            <li class="list-item">Engehaldenstr. 8, Office 307</li>
-            <li class="list-item">CH-3012 Bern</li>
-            <li class="list-item">Switzerland</li>
+        <ul class="list list-unstyled ">
+            <li class="list-item contact-info">University of Bern</li>
+            <li class="list-item contact-info">Institute of Information Systems (IWI)</li>
+            <li class="list-item contact-info">Engehaldenstr. 8, Office 307</li>
+            <li class="list-item contact-info">CH-3012 Bern</li>
+            <li class="list-item contact-info">Switzerland</li>
         </ul>
         <a href="mailto:christian.matt@iwi.unibe.ch" class="link"><i class="bi bi-envelope icon-contact"></i>christian.matt@iwi.unibe.ch</a>
         <br>
@@ -22,7 +22,7 @@ image: contact.webp
         <br>
         <a target="_blank" href="https://www.linkedin.com/in/christianmatt/" class="link"><i class="bi bi-linkedin icon-contact"></i>@christianmatt</a>
     </div>
-    <div class="col-lg-7">
+    <div class="col-lg-7 map-container">
         <iframe defer loading="lazy" src="https://google.com/maps?q=Engehaldestrasse%208&t=k&z=16&ie=UTF8&output=embed" id="map"></iframe>
     </div>
 </div>
