Fix navbar and update style.

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@ image: contact.webp
 ---
 
 <div class="row">
-    <div class="col-lg-5 pe-0">
+    <div class="col-lg-5 contact">
         <p>Get in touch with Christian Matt via one of the following options:</p>
         <ul class="list list-unstyled ">
             <li class="list-item contact-info">University of Bern</li>
