--- a/research.html
+++ b/research.html
@@ -23,8 +23,7 @@ Selected publications include:
 <ul>
     <li class="publication-item">
         Turel, O.; Matt, C.; Trenz, M.; Cheung, CMK. (2020): An Intertwined Perspective on Technology and Digitised Individuals:
-        Linkages, Needs and Outcomes, <i class="publication-item">Information Systems Journal</i> (30:6), pp. 929-939
-        <script>getDOILink('10.1111/isj.12304', 'publication-item')</script>.
+        Linkages, Needs and Outcomes, <i class="publication-item">Information Systems Journal</i> (30:6), pp. 929-939<script>getDOILink('10.1111/isj.12304', 'publication-item')</script>.
     </li>
     <li class="publication-item">Hess, T.; Matt, C.; Benlian, A.; Wiesböck, F. (2016): Options for Formulating a Digital Transformation Strategy, <i class="publication-item">MIS Quarterly Executive</i> (15:2), pp. 103-119.</li>
     <li class="publication-item">Matt, C.; Hess, T.; Benlian, A. (2015): Digital Transformation Strategies,<i class="publication-item"> Business & Information Systems Engineering</i> (57:5), pp. 339-343<script>getDOILink('10.1007/s12599-015-&shy;0401-5')</script>.</li>
@@ -32,6 +31,7 @@ Selected publications include:
 
 <h2 class="h2">2. Digital User Experiences</h2>
 <ul>
+    <li class="publication-item">Mütterlein, J.; Berger, B.; Matt, C.; Stirner, A.; Hess, T. (2022): Co-Creation in Virtual Reality: Immersion als Treiber des Kundenerlebnisses, <i class="publication-item">HMD Praxis der Wirtschaftsinformatik</i> (59:1), pp. 246-260<script>getDOILink('10.1365/s40702-&shy;021-00812-1')</script>.</li>
     <li class="publication-item">Bründl, S.; Matt, C.; Hess, T.; Engert, S. (2022): How Synchronous Participation Affects the Willingness to Subscribe to Social Live Streaming Services: The Role of Co-Interactive Behavior on Twitch, <i class="publication-item">European Journal of Information Systems</i> (forthcoming)<script>getDOILink('10.1080/0960085X.2022.&shy;2062468')</script>.</li>
     <li class="publication-item">Clemons, E.K.; Wilson, J.; Matt, C.; Hess, T.; Ren, F.; Jin, F. (2016): Global Differences in Online Shopping Behavior: Understanding the Factors that Lead to Trust, <i class="publication-item">Journal of Management Information Systems</i> (33:4), pp. 1117-1148<script>getDOILink('10.1080/07421222.2016.&shy;1267531')</script>.</li>
     <li class="publication-item">Berger, B.; Matt, C.; Steininger, D. M.; Hess, T. (2015): It Is Not Just About Competition with “Free”: Differences Between Content Formats in Consumer Preferences and Willingness to Pay, <i class="publication-item">Journal of Management Information Systems</i> (32:3), pp. 105-128<script>getDOILink('10.1080/07421222.2015.&shy;1095038')</script>.</li>
@@ -39,8 +39,8 @@ Selected publications include:
 
 <h2 class="h2">3. Design of Responsible AI-based Services</h2>
 <ul>
-    <li class="publication-item">Lüthi, N.; Matt, C.; Myrach, T. (2022): Wertbasiertes Design von Entscheidungsunterstützungs&shy;systemen - Von der Wertetabelle zur praktischen Umsetzung, <i class="publication-item">HMD Praxis der Wirtschaftsinformatik</i>, (forthcoming)<script>getDOILink('10.1365/s40702-022-&shy;00845-0')</script>.</li>
-    <li class="publication-item">Weiler, S.; Matt, C.; Hess, T. (2021): Immunizing with Information – Inoculation Messages Against Conversational Agents’ Response Failures, <i class="publication-item">Electronic Markets</i>, (forthcoming)<script>getDOILink('10.1007/s12525-021-&shy;00509-9')</script>.</li>
+    <li class="publication-item">Weiler, S.; Matt, C.; Hess, T. (2022): Immunizing with Information – Inoculation Messages Against Conversational Agents’ Response Failures, <i class="publication-item">Electronic Markets</i> (32), pp. 239-258<script>getDOILink('10.1007/s12525-021-&shy;00509-9')</script>.</li>
+    <li class="publication-item">Lüthi, N.; Matt, C.; Myrach, T. (2022): Wertbasiertes Design von Entscheidungsunterstützungs&shy;systemen - Von der Wertetabelle zur praktischen Umsetzung, <i class="publication-item">HMD Praxis der Wirtschaftsinformatik</i> (forthcoming)<script>getDOILink('10.1365/s40702-022-&shy;00845-0')</script>.</li>
     <li class="publication-item">Lüthi, N.; Matt, C.; Myrach, T. (2021): A Value-Sensitive Design Approach to Minimize Value Tensions in Software-based Risk-Assessment Instruments, <i class="publication-item">Journal of Decision Systems</i> (30:2-3), pp. 194-214<script>getDOILink('10.1080/12460125.2020.&shy;1859744')</script>.</li>
 </ul>
 
