Update email address.

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@ image: contact.webp
             <li class="list-item contact-info">CH-3012 Bern</li>
             <li class="list-item contact-info">Switzerland</li>
         </ul>
-        <a href="mailto:christian.matt@iwi.unibe.ch" class="link"><i class="bi bi-envelope icon-contact"></i>christian.matt@iwi.unibe.ch</a>
+        <a href="mailto:christian.matt@unibe.ch" class="link"><i class="bi bi-envelope icon-contact"></i>christian.matt@unibe.ch</a>
         <br>
         <a href="tel:+41 31 684 49 67" class="link"><i class="bi bi-telephone icon-contact"></i>+41 31 684 49 67</a>
         <br>
