--- a/research.html
+++ b/research.html
@@ -5,44 +5,35 @@ keywords: Digital Transformation, Responsible Artificial Intelligence, Data-base
 description: His research foci are on Digital Transformation and Value Creation, Responsible Artificial Intelligence and Data-based Services.
 image: research.webp
 ---
-
 <p>
-Christian Matt’s research focuses on the Digital Transformation of firms and society, digital user experiences, as well 
-as on the design of responsible AI-based services. His research projects often pursue empirical, interdisciplinary 
-approaches to cover socio-technical effects that digital technologies and data-based services have on firms and society 
-alike. Christian Matt has been responsible for a number of large research projects, and as a member of the research group
-<script>getExternalLink('Law and Digitalization', 'https://www.digitallaw.unibe.ch/index_eng.html')</script> at the University of Bern, he also supports the digital transformation in the legal field.
-</p>
-<p>
-His <script>getExternalLink('publications', 'https://scholar.google.com/citations?user=HSsnJNgAAAAJ&hl=en&oi=sra')</script>
-have appeared in a wide variety of internationally renowned journals as well as magazines for practitioners. 
-Selected publications include:
+Focusing on the Digital Transformation of firms and society, as well as on the responsible design and use AI-based services,
+Christian Matt’s research projects often pursue interdisciplinary approaches to discover the socio-technical effects that digital technologies
+have on different stakeholders. His {% include links/external.html url="https://scholar.google.com/citations?user=HSsnJNgAAAAJ&hl=en&oi=sra" name="research"%} has been published in international top-notch academic and practice-oriented journals
+(e.g., MIS Quarterly, Journal of Management Information Systems, Journal of Information Technology, MIS Quarterly Executive).
+Christian Matt currently serves as a Senior Editor of the journals Electronic Markets and Internet Research.
 </p>
 
-<h2 class="h2">1. Digital Transformation of Firms and Society</h2>
+
+<h2 class="h2">Selected publications:</h2>
 <ul>
+    <li class="publication-item">Lehrer, C.; Constantinou, I.; Matt, C.; Hess, T. (2023): How Data Ephemerality Features Affect User Engagement with Social Media, <i class="publication-item">MIS Quarterly</i> (forthcoming).</li>
+    <li class="publication-item">Ebrahimi, S.; Matt, C. (2023): Not Seeing the (Moral) Forest for the Trees? How Task Complexity and Employees’ Expertise Affect Moral Disengagement with Discriminatory Data Analytics Recommendations, <i class="publication-item">Journal of Information Technology</i>{% include links/doi.html doi="10.1177/02683962231181148" name="10.1177/02683962231181148"%}.</li>
+    <li class="publication-item">Bründl, S.; Matt, C.; Hess, T.; Engert, S. (2022): How Synchronous Participation Affects the Willingness to Subscribe to Social Live Streaming Services: The Role of Co-Interactive Behavior on Twitch, <i class="publication-item">European Journal of Information Systems</i> (forthcoming){% include links/doi.html doi="10.1080/0960085X.2022.2062468" name="10.1080/0960085X.2022.&shy;2062468"%}.</li>
     <li class="publication-item">
         Turel, O.; Matt, C.; Trenz, M.; Cheung, CMK. (2020): An Intertwined Perspective on Technology and Digitised Individuals:
-        Linkages, Needs and Outcomes, <i class="publication-item">Information Systems Journal</i> (30:6), pp. 929-939<script>getDOILink('10.1111/isj.12304', 'publication-item')</script>.
+        Linkages, Needs and Outcomes, <i class="publication-item">Information Systems Journal</i> (30:6), pp. 929-939{% include links/doi.html doi="10.1111/isj.12304" name="10.1111/isj.12304"%}.
     </li>
-    <li class="publication-item">Hess, T.; Matt, C.; Benlian, A.; Wiesböck, F. (2016): Options for Formulating a Digital Transformation Strategy, <i class="publication-item">MIS Quarterly Executive</i> (15:2), pp. 103-119.</li>
-    <li class="publication-item">Matt, C.; Hess, T.; Benlian, A. (2015): Digital Transformation Strategies,<i class="publication-item"> Business & Information Systems Engineering</i> (57:5), pp. 339-343<script>getDOILink('10.1007/s12599-015-&shy;0401-5')</script>.</li>
+    <li class="publication-item">Matt, C.; Hess, T.; Benlian, A. (2015): Digital Transformation Strategies,<i class="publication-item"> Business & Information Systems Engineering</i> (57:5), pp. 339-343{% include links/doi.html doi="10.1007/s12599-015-0401-5" name="10.1007/s12599-015-&shy;0401-5"%}.</li>
 </ul>
 
-<h2 class="h2">2. Digital User Experiences</h2>
+<h2 class="h2">Current research projects include:</h2>
 <ul>
-    <li class="publication-item">Bründl, S.; Matt, C.; Hess, T.; Engert, S. (2022): How Synchronous Participation Affects the Willingness to Subscribe to Social Live Streaming Services: The Role of Co-Interactive Behavior on Twitch, <i class="publication-item">European Journal of Information Systems</i> (forthcoming)<script>getDOILink('10.1080/0960085X.2022.&shy;2062468')</script>.</li>
-    <li class="publication-item">Clemons, E.K.; Wilson, J.; Matt, C.; Hess, T.; Ren, F.; Jin, F. (2016): Global Differences in Online Shopping Behavior: Understanding the Factors that Lead to Trust, <i class="publication-item">Journal of Management Information Systems</i> (33:4), pp. 1117-1148<script>getDOILink('10.1080/07421222.2016.&shy;1267531')</script>.</li>
-    <li class="publication-item">Berger, B.; Matt, C.; Steininger, D. M.; Hess, T. (2015): It Is Not Just About Competition with “Free”: Differences Between Content Formats in Consumer Preferences and Willingness to Pay, <i class="publication-item">Journal of Management Information Systems</i> (32:3), pp. 105-128<script>getDOILink('10.1080/07421222.2015.&shy;1095038')</script>.</li>
-</ul>
-
-<h2 class="h2">3. Design of Responsible AI-based Services</h2>
-<ul>
-    <li class="publication-item">Weiler, S.; Matt, C.; Hess, T. (2022): Immunizing with Information – Inoculation Messages Against Conversational Agents’ Response Failures, <i class="publication-item">Electronic Markets</i> (32), pp. 239-258<script>getDOILink('10.1007/s12525-021-&shy;00509-9')</script>.</li>
-    <li class="publication-item">Lüthi, N.; Matt, C.; Myrach, T. (2022): Wertbasiertes Design von Entscheidungsunterstützungs&shy;systemen - Von der Wertetabelle zur praktischen Umsetzung, <i class="publication-item">HMD Praxis der Wirtschaftsinformatik</i> (59), pp. 525-537<script>getDOILink('10.1365/s40702-022-&shy;00845-0')</script>.</li>
-    <li class="publication-item">Lüthi, N.; Matt, C.; Myrach, T. (2021): A Value-Sensitive Design Approach to Minimize Value Tensions in Software-based Risk-Assessment Instruments, <i class="publication-item">Journal of Decision Systems</i> (30:2-3), pp. 194-214<script>getDOILink('10.1080/12460125.2020.&shy;1859744')</script>.</li>
+    <li class="publication-item">A Multi-perspective Assessment of Channel-related Unfairness in Voice Assistants, SNSF Project Funding, 2023-2027
+    </li>
+    <li class="publication-item">Algorithmic Management – Establishing Fair and Participative Shift Planning in Healthcare (together with Prof. Dr. Philipp Baumann), Digitalization Initiative "Mensch in der digitalen Transformation" of the University of Bern, 2023-2027</li>
+    <li class="publication-item">Digital Support for Legal Users in Specialized Application Domains - Legal and Application Requirements (together with Prof. Dr. Florian Eichel), SNSF Project Funding, 2022-2025</li>
 </ul>
 
 <p>
-More information: <script>getExternalLink('Institute of Information Systems - Prof. Dr. Christian Matt', 'https://www.iwi.unibe.ch/about_us/people/prof_dr_matt_christian/index_eng.html')</script>
+More information: {% include links/external.html url="https://www.iwi.unibe.ch/about_us/people/prof_dr_matt_christian/index_eng.html" name="Institute of Information Systems - Prof. Dr. Christian Matt"%}
 </p>
