Add link to legal user SNSF project.

--- a/research.html
+++ b/research.html
@@ -28,10 +28,9 @@ Christian Matt currently serves as a Senior Editor of the journals Electronic Ma
 
 <h2 class="h2">Current research projects include:</h2>
 <ul>
-    <li class="publication-item">A Multi-perspective Assessment of Channel-related Unfairness in Voice Assistants, SNSF Project Funding, 2023-2027
-    </li>
+    <li class="publication-item">A Multi-perspective Assessment of Channel-related Unfairness in Voice Assistants, SNSF Project Funding, 2023-2027</li>
     <li class="publication-item">Algorithmic Management – Establishing Fair and Participative Shift Planning in Healthcare (together with Prof. Dr. Philipp Baumann), Digitalization Initiative "Mensch in der digitalen Transformation" of the University of Bern, 2023-2027</li>
-    <li class="publication-item">Digital Support for Legal Users in Specialized Application Domains - Legal and Application Requirements (together with Prof. Dr. Florian Eichel), SNSF Project Funding, 2022-2025</li>
+    <li class="publication-item">Digital Support for Legal Users in Specialized Application Domains - Legal and Application Requirements (together with Prof. Dr. Florian Eichel), SNSF Project Funding, 2022-2025 ({% include links/external.html url="https://www.itandlaw.unibe.ch/" name="itandlaw.unibe.ch" class="publication-item"%})</li>
 </ul>
 
 <p>
