Update Google Maps integration.
- Note: Access on Google Maps does not need cookies (-> no consent necessary).

--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,6 @@ image: contact.webp
         <a target="_blank" href="https://www.linkedin.com/in/christianmatt/" class="link"><i class="bi bi-linkedin icon-contact"></i>@christianmatt</a>
     </div>
     <div class="col-lg-7 map-container">
-        <iframe defer loading="lazy" src="https://google.com/maps?q=Engehaldestrasse%208&t=k&z=16&ie=UTF8&output=embed" id="map"></iframe>
+        <iframe id="map" referrerpolicy="no-referrer" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJITeQkZU5jkcRlMn9N-tL7xE&key=AIzaSyCvO97-2YNPsZ1r2Q6YttgESTUahpGBsNc&zoom=17"></iframe>
     </div>
 </div>
