--- a/research.html
+++ b/research.html
@@ -13,8 +13,48 @@ have on different stakeholders. His {% include links/external.html url="https://
 Christian Matt currently serves as a Senior Editor of the journals Electronic Markets and Internet Research.
 </p>
 
+<div class="accordion" id="accordionResearch">
+    <div class="accordion-item">
+        <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                Selected publications
+            </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionResearch">
+            <div class="accordion-body">
+                <ul class="list-unstyled ">
+                    <li class="publication-item">Lehrer, C.; Constantinou, I.; Matt, C.; Hess, T. (2023): How Data Ephemerality Features Affect User Engagement with Social Media, <i class="publication-item">MIS Quarterly</i> (forthcoming).</li>
+                    <li class="publication-item">Ebrahimi, S.; Matt, C. (2023): Not Seeing the (Moral) Forest for the Trees? How Task Complexity and Employees’ Expertise Affect Moral Disengagement with Discriminatory Data Analytics Recommendations, <i class="publication-item">Journal of Information Technology</i>{% include links/doi.html doi="10.1177/02683962231181148" name="10.1177/02683962231181148"%}.</li>
+                    <li class="publication-item">Bründl, S.; Matt, C.; Hess, T.; Engert, S. (2022): How Synchronous Participation Affects the Willingness to Subscribe to Social Live Streaming Services: The Role of Co-Interactive Behavior on Twitch, <i class="publication-item">European Journal of Information Systems</i> (forthcoming){% include links/doi.html doi="10.1080/0960085X.2022.2062468" name="10.1080/0960085X.2022.&shy;2062468"%}.</li>
+                    <li class="publication-item">
+                        Turel, O.; Matt, C.; Trenz, M.; Cheung, CMK. (2020): An Intertwined Perspective on Technology and Digitised Individuals:
+                        Linkages, Needs and Outcomes, <i class="publication-item">Information Systems Journal</i> (30:6), pp. 929-939{% include links/doi.html doi="10.1111/isj.12304" name="10.1111/isj.12304"%}.
+                    </li>
+                    <li class="publication-item">Matt, C.; Hess, T.; Benlian, A. (2015): Digital Transformation Strategies,<i class="publication-item"> Business & Information Systems Engineering</i> (57:5), pp. 339-343{% include links/doi.html doi="10.1007/s12599-015-0401-5" name="10.1007/s12599-015-&shy;0401-5"%}.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="accordion-item">
+        <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                Current research projects
+            </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionResearch">
+            <div class="accordion-body">
+                <ul class="list-unstyled">
+                    <li class="publication-item">A Multi-perspective Assessment of Channel-related Unfairness in Voice Assistants, SNSF Project Funding, 2023-2027</li>
+                    <li class="publication-item">Algorithmic Management – Establishing Fair and Participative Shift Planning in Healthcare (together with Prof. Dr. Philipp Baumann), Digitalization Initiative "Mensch in der digitalen Transformation" of the University of Bern, 2023-2027</li>
+                    <li class="publication-item">Digital Support for Legal Users in Specialized Application Domains - Legal and Application Requirements (together with Prof. Dr. Florian Eichel), SNSF Project Funding, 2022-2025 ({% include links/external.html url="https://www.itandlaw.unibe.ch/" name="itandlaw.unibe.ch" class="publication-item"%})</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
 
-<h2 class="h2">Selected publications:</h2>
+
+<!--<h2 class="h2">Selected publications:</h2>
 <ul>
     <li class="publication-item">Lehrer, C.; Constantinou, I.; Matt, C.; Hess, T. (2023): How Data Ephemerality Features Affect User Engagement with Social Media, <i class="publication-item">MIS Quarterly</i> (forthcoming).</li>
     <li class="publication-item">Ebrahimi, S.; Matt, C. (2023): Not Seeing the (Moral) Forest for the Trees? How Task Complexity and Employees’ Expertise Affect Moral Disengagement with Discriminatory Data Analytics Recommendations, <i class="publication-item">Journal of Information Technology</i>{% include links/doi.html doi="10.1177/02683962231181148" name="10.1177/02683962231181148"%}.</li>
@@ -31,8 +71,8 @@ Christian Matt currently serves as a Senior Editor of the journals Electronic Ma
     <li class="publication-item">A Multi-perspective Assessment of Channel-related Unfairness in Voice Assistants, SNSF Project Funding, 2023-2027</li>
     <li class="publication-item">Algorithmic Management – Establishing Fair and Participative Shift Planning in Healthcare (together with Prof. Dr. Philipp Baumann), Digitalization Initiative "Mensch in der digitalen Transformation" of the University of Bern, 2023-2027</li>
     <li class="publication-item">Digital Support for Legal Users in Specialized Application Domains - Legal and Application Requirements (together with Prof. Dr. Florian Eichel), SNSF Project Funding, 2022-2025 ({% include links/external.html url="https://www.itandlaw.unibe.ch/" name="itandlaw.unibe.ch" class="publication-item"%})</li>
-</ul>
+</ul>-->
 
-<p>
+<p class="mt-3">
 More information: {% include links/external.html url="https://www.iwi.unibe.ch/about_us/people/prof_dr_matt_christian/index_eng.html" name="Institute of Information Systems - Prof. Dr. Christian Matt"%}
 </p>
