Fix typo in research.html.

--- a/research.html
+++ b/research.html
@@ -5,8 +5,9 @@ keywords: Digital Transformation, Responsible Artificial Intelligence, Data-base
 description: His research foci are on Digital Transformation and Value Creation, Responsible Artificial Intelligence and Data-based Services.
 image: research.webp
 ---
+
 <p>
-Focusing on the Digital Transformation of firms and society, as well as on the responsible design and use AI-based services,
+Focusing on the Digital Transformation of firms and society, as well as on the responsible design and use of AI-based services,
 Christian Matt’s research projects often pursue interdisciplinary approaches to discover the socio-technical effects that digital technologies
 have on different stakeholders. His {% include links/external.html url="https://scholar.google.com/citations?user=HSsnJNgAAAAJ&hl=en&oi=sra" name="research"%} has been published in international top-notch academic and practice-oriented journals
 (e.g., MIS Quarterly, Journal of Management Information Systems, Journal of Information Technology, MIS Quarterly Executive).
