--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ keywords: Universität Bern, Digital Transformation Strategy, Expert, Digital Bu
 description: Christian Matt is Professor and Co-director of the Institute of Information Systems at the University of Bern. As a researcher, consultant and expert for Digital Transformation, Digital Business and Responsible Artificial Intelligence, he is fascinated by how digital technologies lead to new opportunities and paradigm shifts for firms, public organisations, society, and individuals.
 image: profile.jpg
 ---
+
 <p>
 Christian Matt is Professor and Co-director of the {% include links/external.html url="https://www.iwi.unibe.ch/index_ger.html" name="Institute of Information Systems"%}
 at the University of Bern. As a researcher, consultant, and expert for Digital Transformation and responsible Artificial Intelligence, 
@@ -20,6 +21,18 @@ Bringing research and practice together, he shares his expertise in consulting, 
             </button>
         </h2>
         <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionRoles">
+            <div class="accordion-body">
+                <ul class="list-unstyled ">
+                    <li class="publication-item">Member of the Digitization Commission (DigiK) of the University of Bern</li>
+                    <li class="publication-item">Member of the Research Group “Law and Digitalization” at the University of Bern</li>
+                    <li class="publication-item">Member of the Parliamentary Working Group on Regulatory Technologies</li>
+                    <li class="publication-item">Chairman of the Foundation Board, Fondation Travers Borgstroem</li>
+                    <li class="publication-item">Former Secretary of the Swiss Chapter of the Association for Information Systems (CHAIS)</li>
+                    <li class="publication-item">Trustee of the Foundation of German Business (“Stiftung der Deutschen Wirtschaft”), Switzerland</li>
+                </ul>
+            </div>
+        </div>
+        <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionRoles">
             <div class="accordion-body">
                 <ul class="list-unstyled ">
                     <li class="publication-item">Member of the Digitization Commission (DigiK) of the University of Bern</li>
