--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@ image: contact.webp
         <ul class="list list-unstyled ">
             <li class="list-item contact-info">University of Bern</li>
             <li class="list-item contact-info">Institute of Information Systems (IWI)</li>
-            <li class="list-item contact-info">Engehaldenstr. 8, Office 307</li>
+            <li class="list-item contact-info">Engehaldenstrasse 8, Office 307</li>
             <li class="list-item contact-info">CH-3012 Bern</li>
             <li class="list-item contact-info">Switzerland</li>
         </ul>
