Add keywords for roles and positions.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Prof. Dr. Christian Matt
-keywords: Universität Bern, Digital Transformation Strategy, Expert, Digital Business, Responsible Artificial Intelligence, Professor
+keywords: Universität Bern, Digital Transformation Strategy, Expert, Digital Business, Responsible Artificial Intelligence, Professor, Stiftungsrat, Verwaltungsrat, Advisory Board, Kommission, Christian, Matt, Digitization Commission, Law and Digitalization, Regulatory Technologies, Association for Information Systems, Stiftung der Deutschen Wirtschaft
 description: Christian Matt is Professor and Co-director of the Institute of Information Systems at the University of Bern. As a researcher, consultant and expert for Digital Transformation, Digital Business and Responsible Artificial Intelligence, he is fascinated by how digital technologies lead to new opportunities and paradigm shifts for firms, public organisations, society, and individuals.
 image: profile.jpg
 ---
