Collapse accordions on small screens.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Bringing research and practice together, he shares his expertise in consulting, 
 <div class="accordion" id="accordionRoles">
     <div class="accordion-item">
         <h2 class="accordion-header">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            <button id="accordion-button" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                 Positions
             </button>
         </h2>
