Add margin between contact links.

--- a/contact.html
+++ b/contact.html
@@ -16,11 +16,9 @@ image: contact.webp
             <li class="list-item contact-info">CH-3012 Bern</li>
             <li class="list-item contact-info">Switzerland</li>
         </ul>
-        <a href="mailto:christian.matt@unibe.ch" class="link"><i class="bi bi-envelope icon-contact"></i>christian.matt@unibe.ch</a>
-        <br>
-        <a href="tel:+41 31 684 49 67" class="link"><i class="bi bi-telephone icon-contact"></i>+41 31 684 49 67</a>
-        <br>
-        <a target="_blank" href="https://www.linkedin.com/in/christianmatt/" class="link"><i class="bi bi-linkedin icon-contact"></i>@christianmatt</a>
+        <a href="mailto:christian.matt@unibe.ch" class="link contact-link"><i class="bi bi-envelope icon-contact"></i>christian.matt@unibe.ch</a>
+        <a href="tel:+41 31 684 49 67" class="link contact-link"><i class="bi bi-telephone icon-contact"></i>+41 31 684 49 67</a>
+        <a target="_blank" href="https://www.linkedin.com/in/christianmatt/" class="link contact-link"><i class="bi bi-linkedin icon-contact"></i>@christianmatt</a>
     </div>
     <div class="col-lg-7 map-container">
         <iframe id="map" title="Map" referrerpolicy="no-referrer" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJITeQkZU5jkcRlMn9N-tL7xE&key=AIzaSyCvO97-2YNPsZ1r2Q6YttgESTUahpGBsNc&zoom=17"></iframe>
