Scale font sizes on different screen sizes.

--- a/research.html
+++ b/research.html
@@ -24,14 +24,14 @@ Christian Matt currently serves as a Senior Editor of the journals Electronic Ma
         <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionResearch">
             <div class="accordion-body">
                 <ul class="list-unstyled ">
-                    <li class="publication-item">Lehrer, C.; Constantinou, I.; Matt, C.; Hess, T. (2023): How Data Ephemerality Features Affect User Engagement with Social Media, <i class="publication-item">MIS Quarterly</i> (forthcoming).</li>
-                    <li class="publication-item">Ebrahimi, S.; Matt, C. (2023): Not Seeing the (Moral) Forest for the Trees? How Task Complexity and Employees’ Expertise Affect Moral Disengagement with Discriminatory Data Analytics Recommendations, <i class="publication-item">Journal of Information Technology</i>{% include links/doi.html doi="10.1177/02683962231181148" name="10.1177/02683962231181148"%}.</li>
-                    <li class="publication-item">Bründl, S.; Matt, C.; Hess, T.; Engert, S. (2022): How Synchronous Participation Affects the Willingness to Subscribe to Social Live Streaming Services: The Role of Co-Interactive Behavior on Twitch, <i class="publication-item">European Journal of Information Systems</i> (forthcoming){% include links/doi.html doi="10.1080/0960085X.2022.2062468" name="10.1080/0960085X.2022.&shy;2062468"%}.</li>
-                    <li class="publication-item">
+                    <li class="accordion-list-item">Lehrer, C.; Constantinou, I.; Matt, C.; Hess, T. (2023): How Data Ephemerality Features Affect User Engagement with Social Media, <i class="accordion-list-item">MIS Quarterly</i> (forthcoming).</li>
+                    <li class="accordion-list-item">Ebrahimi, S.; Matt, C. (2023): Not Seeing the (Moral) Forest for the Trees? How Task Complexity and Employees’ Expertise Affect Moral Disengagement with Discriminatory Data Analytics Recommendations, <i class="accordion-list-item">Journal of Information Technology</i>{% include links/doi.html doi="10.1177/02683962231181148" name="10.1177/02683962231181148"%}.</li>
+                    <li class="accordion-list-item">Bründl, S.; Matt, C.; Hess, T.; Engert, S. (2022): How Synchronous Participation Affects the Willingness to Subscribe to Social Live Streaming Services: The Role of Co-Interactive Behavior on Twitch, <i class="accordion-list-item">European Journal of Information Systems</i> (forthcoming){% include links/doi.html doi="10.1080/0960085X.2022.2062468" name="10.1080/0960085X.2022.&shy;2062468"%}.</li>
+                    <li class="accordion-list-item">
                         Turel, O.; Matt, C.; Trenz, M.; Cheung, CMK. (2020): An Intertwined Perspective on Technology and Digitised Individuals:
-                        Linkages, Needs and Outcomes, <i class="publication-item">Information Systems Journal</i> (30:6), pp. 929-939{% include links/doi.html doi="10.1111/isj.12304" name="10.1111/isj.12304"%}.
+                        Linkages, Needs and Outcomes, <i class="accordion-list-item">Information Systems Journal</i> (30:6), pp. 929-939{% include links/doi.html doi="10.1111/isj.12304" name="10.1111/isj.12304"%}.
                     </li>
-                    <li class="publication-item">Matt, C.; Hess, T.; Benlian, A. (2015): Digital Transformation Strategies,<i class="publication-item"> Business & Information Systems Engineering</i> (57:5), pp. 339-343{% include links/doi.html doi="10.1007/s12599-015-0401-5" name="10.1007/s12599-015-&shy;0401-5"%}.</li>
+                    <li class="accordion-list-item">Matt, C.; Hess, T.; Benlian, A. (2015): Digital Transformation Strategies,<i class="accordion-list-item"> Business & Information Systems Engineering</i> (57:5), pp. 339-343{% include links/doi.html doi="10.1007/s12599-015-0401-5" name="10.1007/s12599-015-&shy;0401-5"%}.</li>
                 </ul>
             </div>
         </div>
@@ -45,9 +45,9 @@ Christian Matt currently serves as a Senior Editor of the journals Electronic Ma
         <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionResearch">
             <div class="accordion-body">
                 <ul class="list-unstyled">
-                    <li class="publication-item">A Multi-perspective Assessment of Channel-related Unfairness in Voice Assistants, SNSF Project Funding, 2023-2027</li>
-                    <li class="publication-item">Algorithmic Management – Establishing Fair and Participative Shift Planning in Healthcare (together with Prof. Dr. Philipp Baumann), Digitalization Initiative "Mensch in der digitalen Transformation" of the University of Bern, 2023-2027</li>
-                    <li class="publication-item">Digital Support for Legal Users in Specialized Application Domains - Legal and Application Requirements (together with Prof. Dr. Florian Eichel), SNSF Project Funding, 2022-2025 ({% include links/external.html url="https://www.itandlaw.unibe.ch/" name="itandlaw.unibe.ch" class="publication-item"%})</li>
+                    <li class="accordion-list-item">A Multi-perspective Assessment of Channel-related Unfairness in Voice Assistants, SNSF Project Funding, 2023-2027</li>
+                    <li class="accordion-list-item">Algorithmic Management – Establishing Fair and Participative Shift Planning in Healthcare (together with Prof. Dr. Philipp Baumann), Digitalization Initiative "Mensch in der digitalen Transformation" of the University of Bern, 2023-2027</li>
+                    <li class="accordion-list-item">Digital Support for Legal Users in Specialized Application Domains - Legal and Application Requirements (together with Prof. Dr. Florian Eichel), SNSF Project Funding, 2022-2025 ({% include links/external.html url="https://www.itandlaw.unibe.ch/" name="itandlaw.unibe.ch" class="publication-item"%})</li>
                 </ul>
             </div>
         </div>
