--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@ Bringing research and practice together, he shares his expertise in consulting, 
         <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionRoles">
             <div class="accordion-body">
                 <ul class="list-unstyled ">
-                    <li class="publication-item">Since 2020: Professor and Co-director of the Institute of Information Systems, University of Bern</li>
-                    <li class="publication-item pb-4">2016-2020: Assistant Professor, University of Bern</li>
-                    <li class="publication-item">2023 Appointment as Senior Editor at "Electronic Markets"</li>
-                    <li class="publication-item">2022 Appointment as Associate Editor at "Digital Transformation and Society"</li>
-                    <li class="publication-item pb-4">2020 Appointment as Senior Editor at "Internet Research")</li>
-                    <li class="publication-item">2022 Distinguished Member of the "Association for Information Systems (AIS)"</li>
+                    <li class="accordion-list-item">Since 2020: Professor and Co-director of the Institute of Information Systems, University of Bern</li>
+                    <li class="accordion-list-item pb-4">2016-2020: Assistant Professor, University of Bern</li>
+                    <li class="accordion-list-item">2023 Appointment as Senior Editor at "Electronic Markets"</li>
+                    <li class="accordion-list-item">2022 Appointment as Associate Editor at "Digital Transformation and Society"</li>
+                    <li class="accordion-list-item pb-4">2020 Appointment as Senior Editor at "Internet Research")</li>
+                    <li class="accordion-list-item">2022 Distinguished Member of the "Association for Information Systems (AIS)"</li>
                 </ul>
             </div>
         </div>
@@ -42,12 +42,12 @@ Bringing research and practice together, he shares his expertise in consulting, 
         <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionRoles">
             <div class="accordion-body">
                 <ul class="list-unstyled ">
-                    <li class="publication-item">Member of the Digitization Commission (DigiK) of the University of Bern</li>
-                    <li class="publication-item">Member of the Research Group “Law and Digitalization” at the University of Bern</li>
-                    <li class="publication-item">Member of the Parliamentary Working Group on Regulatory Technologies</li>
-                    <li class="publication-item">Chairman of the Foundation Board, Fondation Travers Borgstroem</li>
-                    <li class="publication-item">Former Secretary of the Swiss Chapter of the Association for Information Systems (CHAIS)</li>
-                    <li class="publication-item">Trustee of the Foundation of German Business (“Stiftung der Deutschen Wirtschaft”), Switzerland</li>
+                    <li class="accordion-list-item">Member of the Digitization Commission (DigiK) of the University of Bern</li>
+                    <li class="accordion-list-item">Member of the Research Group “Law and Digitalization” at the University of Bern</li>
+                    <li class="accordion-list-item">Member of the Parliamentary Working Group on Regulatory Technologies</li>
+                    <li class="accordion-list-item">Chairman of the Foundation Board, Fondation Travers Borgstroem</li>
+                    <li class="accordion-list-item">Former Secretary of the Swiss Chapter of the Association for Information Systems (CHAIS)</li>
+                    <li class="accordion-list-item">Trustee of the Foundation of German Business (“Stiftung der Deutschen Wirtschaft”), Switzerland</li>
                 </ul>
             </div>
         </div>
