Fix layout of external links in accordions.

--- a/research.html
+++ b/research.html
@@ -47,7 +47,7 @@ Christian Matt currently serves as a Senior Editor of the journals Electronic Ma
                 <ul class="list-unstyled">
                     <li class="accordion-list-item">A Multi-perspective Assessment of Channel-related Unfairness in Voice Assistants, SNSF Project Funding, 2023-2027</li>
                     <li class="accordion-list-item">Algorithmic Management – Establishing Fair and Participative Shift Planning in Healthcare (together with Prof. Dr. Philipp Baumann), Digitalization Initiative "Mensch in der digitalen Transformation" of the University of Bern, 2023-2027</li>
-                    <li class="accordion-list-item">Digital Support for Legal Users in Specialized Application Domains - Legal and Application Requirements (together with Prof. Dr. Florian Eichel), SNSF Project Funding, 2022-2025 ({% include links/external.html url="https://www.itandlaw.unibe.ch/" name="itandlaw.unibe.ch" class="publication-item"%})</li>
+                    <li class="accordion-list-item">Digital Support for Legal Users in Specialized Application Domains - Legal and Application Requirements (together with Prof. Dr. Florian Eichel), SNSF Project Funding, 2022-2025 ({% include links/external.html url="https://www.itandlaw.unibe.ch/" name="itandlaw.unibe.ch" class="accordion"%})</li>
                 </ul>
             </div>
         </div>
