Updates to content of consulting and index page.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Bringing research and practice together, he shares his expertise in consulting, 
                     <li class="accordion-list-item pb-4">2016-2020: Assistant Professor, University of Bern</li>
                     <li class="accordion-list-item">2023 Appointment as Senior Editor at "Electronic Markets"</li>
                     <li class="accordion-list-item">2022 Appointment as Associate Editor at "Digital Transformation and Society"</li>
-                    <li class="accordion-list-item pb-4">2020 Appointment as Senior Editor at "Internet Research")</li>
+                    <li class="accordion-list-item pb-4">2020 Appointment as Senior Editor at "Internet Research"</li>
                     <li class="accordion-list-item">2022 Distinguished Member of the "Association for Information Systems (AIS)"</li>
                 </ul>
             </div>
