--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ image: profile.jpg
 ---
 
 <p>
-Christian Matt is is Director and Full Professor at the {% include links/external.html url="https://www.iwi.unibe.ch/index_ger.html" name="Institute of Information Systems"%}
+Christian Matt is Director and Full Professor at the {% include links/external.html url="https://www.iwi.unibe.ch/index_ger.html" name="Institute of Information Systems"%}
 at the University of Bern. As a researcher, consultant, and expert for Digital Transformation and responsible Artificial Intelligence, 
 he is fascinated by how digital technologies lead to new opportunities and paradigm shifts for firms, public organizations, society, and individuals. 
 Bringing research and practice together, he shares his expertise in consulting, coaching, executive education, and as a keynote speaker.
