Update content of index page.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Bringing research and practice together, he shares his expertise in consulting, 
         <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionRoles">
             <div class="accordion-body">
                 <ul class="list-unstyled ">
-                    <li class="accordion-list-item">Director and Full Professor at the Institute of Information Systems, University of Bern</li>
+                    <li class="accordion-list-item pb-4">Director and Full Professor at the Institute of Information Systems, University of Bern</li>
                     <li class="accordion-list-item">2023 Appointment as Senior Editor at "Electronic Markets"</li>
                     <li class="accordion-list-item">2022 Appointment as Associate Editor at "Digital Transformation and Society"</li>
                     <li class="accordion-list-item pb-4">2020 Appointment as Senior Editor at "Internet Research"</li>
