--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ image: profile.jpg
 ---
 
 <p>
-Christian Matt is Director and Full Professor at the {% include links/external.html url="https://www.iwi.unibe.ch/index_ger.html" name="Institute of Information Systems"%}
+Christian Matt is Full Professor and Co-Director at the {% include links/external.html url="https://www.iwi.unibe.ch/index_ger.html" name="Institute of Information Systems"%}
 at the University of Bern. As a researcher, consultant, and expert for Digital Transformation and responsible Artificial Intelligence, 
 he is fascinated by how digital technologies lead to new opportunities and paradigm shifts for firms, public organizations, society, and individuals. 
 Bringing research and practice together, he shares his expertise in consulting, coaching, executive education, and as a keynote speaker.
@@ -23,7 +23,7 @@ Bringing research and practice together, he shares his expertise in consulting, 
         <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionRoles">
             <div class="accordion-body">
                 <ul class="list-unstyled ">
-                    <li class="accordion-list-item pb-4">Director and Full Professor at the Institute of Information Systems, University of Bern</li>
+                    <li class="accordion-list-item pb-4">Full Professor and Co-Director at the Institute of Information Systems, University of Bern</li>
                     <li class="accordion-list-item">2023 Appointment as Senior Editor at "Electronic Markets"</li>
                     <li class="accordion-list-item">2022 Appointment as Associate Editor at "Digital Transformation and Society"</li>
                     <li class="accordion-list-item pb-4">2020 Appointment as Senior Editor at "Internet Research"</li>
@@ -43,7 +43,7 @@ Bringing research and practice together, he shares his expertise in consulting, 
                 <ul class="list-unstyled ">
                     <li class="accordion-list-item">Member of the Digitization Commission (DigiK) of the University of Bern</li>
                     <li class="accordion-list-item">Member of the Research Group “Law and Digitalization” at the University of Bern</li>
-                    <li class="accordion-list-item">Member of the Parliamentary Working Group on Regulatory Technologies</li>
+                    <li class="accordion-list-item">Member of the Working Group “Regulatory Technologies”</li>
                     <li class="accordion-list-item">Chairman of the Foundation Board, Fondation Travers Borgstroem</li>
                     <li class="accordion-list-item">Former Secretary of the Swiss Chapter of the Association for Information Systems (CHAIS)</li>
                     <li class="accordion-list-item">Trustee of the Foundation of German Business (“Stiftung der Deutschen Wirtschaft”), Switzerland</li>
