--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ image: profile.jpg
 ---
 
 <p>
-Christian Matt is Full Professor and Co-Director at the {% include links/external.html url="https://www.iwi.unibe.ch/index_ger.html" name="Institute of Information Systems"%}
+Christian Matt is Full Professor and Co-Director of the {% include links/external.html url="https://www.iwi.unibe.ch/index_ger.html" name="Institute of Information Systems"%}
 at the University of Bern. As a researcher, consultant, and expert for Digital Transformation and responsible Artificial Intelligence, 
 he is fascinated by how digital technologies lead to new opportunities and paradigm shifts for firms, public organizations, society, and individuals. 
 Bringing research and practice together, he shares his expertise in consulting, coaching, executive education, and as a keynote speaker.
@@ -22,8 +22,8 @@ Bringing research and practice together, he shares his expertise in consulting, 
         </h2>
         <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionRoles">
             <div class="accordion-body">
-                <ul class="list-unstyled ">
-                    <li class="accordion-list-item pb-4">Full Professor and Co-Director at the Institute of Information Systems, University of Bern</li>
+                <ul class="accordion-list">
+                    <li class="accordion-list-item pb-4">Full Professor and Co-Director of the Institute of Information Systems, University of Bern</li>
                     <li class="accordion-list-item">2023 Appointment as Senior Editor at "Electronic Markets"</li>
                     <li class="accordion-list-item">2022 Appointment as Associate Editor at "Digital Transformation and Society"</li>
                     <li class="accordion-list-item pb-4">2020 Appointment as Senior Editor at "Internet Research"</li>
@@ -40,7 +40,7 @@ Bringing research and practice together, he shares his expertise in consulting, 
         </h2>
         <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionRoles">
             <div class="accordion-body">
-                <ul class="list-unstyled ">
+                <ul class="accordion-list">
                     <li class="accordion-list-item">Member of the Digitization Commission (DigiK) of the University of Bern</li>
                     <li class="accordion-list-item">Member of the Research Group “Law and Digitalization” at the University of Bern</li>
                     <li class="accordion-list-item">Member of the Working Group “Regulatory Technologies”</li>
