--- a/research.html
+++ b/research.html
@@ -7,11 +7,11 @@ image: research.webp
 ---
 
 <p>
-Focusing on the Digital Transformation of firms and society, as well as on the responsible design and use of AI-based services,
-Christian Matt’s research projects often pursue interdisciplinary approaches to discover the socio-technical effects that digital technologies
-have on different stakeholders. His {% include links/external.html url="https://scholar.google.com/citations?user=HSsnJNgAAAAJ&hl=en&oi=sra" name="research"%} has been published in international top-notch academic and practice-oriented journals
-(e.g., MIS Quarterly, Journal of Management Information Systems, Journal of Information Technology, MIS Quarterly Executive).
-Christian Matt currently serves as a Senior Editor of the journals Electronic Markets and Internet Research.
+    Christian Matt investigates how digital technologies – especially AI – reshape organizations, industries, and society at large. His research is driven by a central question: How can we harness the potential of digital transformation and AI while ensuring responsible, human-centered design?
+    <br><br>
+    To answer this, he takes an interdisciplinary approach – combining insights from information systems, management and other disciplines – and works closely with partners from sectors such as e-commerce, healthcare and public services. His studies explore the real-world impact of AI-based services and digital strategies on key stakeholders, from customers, patients and professionals to regulators and executives.
+    <br><br>
+    His work is published in leading academic and practice-oriented journals, including <i>MIS Quarterly</i>, <i>Journal of Management Information Systems</i>, <i>Journal of Information Technology</i>, and <i>MIS Quarterly Executive</i>. He also serves as Senior Editor for <i>Electronic Markets</i> and <i>Internet Research</i>.
 </p>
 
 <div class="accordion" id="accordionResearch">
@@ -23,7 +23,7 @@ Christian Matt currently serves as a Senior Editor of the journals Electronic Ma
         </h2>
         <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionResearch">
             <div class="accordion-body">
-                <ul class="list-unstyled ">
+                <ul class="accordion-list">
                     <li class="accordion-list-item">Ebrahimi, S.; Matt, C. (2024): Not Seeing the (Moral) Forest for the Trees? How Task Complexity and Employees’ Expertise Affect Moral Disengagement with Discriminatory Data Analytics Recommendations, <i class="accordion-list-item">Journal of Information Technology</i> (39:3), pp. 477-502{% include links/doi.html doi="10.1177/02683962231181148" name="10.1177/02683962231181148"%}.</li>
                     <li class="accordion-list-item">Lehrer, C.; Constantinou, I.; Matt, C.; Hess, T. (2023): How Ephemerality Features Affect User Engagement with Social Media, <i class="accordion-list-item">MIS Quarterly</i> (47:4), pp. 1663-1678{% include links/doi.html doi="10.25300/MISQ/2023/17085" name="10.25300/MISQ/2023/17085"%}.</li>
                     <li class="accordion-list-item">Lüthi, N.; Matt, C.; Myrach, T.; Junglas, I. (2023): Augmented Intelligence, Augmented Responsibility?, <i class="accordion-list-item">Business & Information Systems Engineering</i> (65:4), pp. 391-401{% include links/doi.html doi="10.1007/s12599-023-00789-9" name="10.1007/s12599-023-00789-9"%}.</li>
@@ -42,11 +42,12 @@ Christian Matt currently serves as a Senior Editor of the journals Electronic Ma
         </h2>
         <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionResearch">
             <div class="accordion-body">
-                <ul class="list-unstyled">
+                <ul class="accordion-list">
                     <li class="accordion-list-item">ELCI – Expl(AI)ning Legal Communication of Individuals (funding as part of the {% include links/external.html url="https://www.digitalisierung.unibe.ch/strategy/index_eng.html" name="digitalization strategy" class="accordion"%} of the University of Bern, in collaboration with {% include links/external.html url="https://www.civpro.unibe.ch/ueber_uns/personen/prof_dr_eichel_florian/index_ger.html" name="Prof. Dr. Florian Eichel" class="accordion"%}, Data Science Lab, UniBE)</li>
                     <li class="accordion-list-item">A Multi-perspective Assessment of Channel-related Unfairness in Voice Assistants (SNSF project funding)</li>
                     <li class="accordion-list-item">Algorithmic Management – Establishing Fair and Participative Shift Planning in Healthcare (funding as part of the {% include links/external.html url="https://www.digitalisierung.unibe.ch/strategy/index_eng.html" name="digitalization strategy" class="accordion"%} of the University of Bern, in collaboration with {% include links/external.html url="https://www.pqm.unibe.ch/about_us/people/prof_dr_baumann_philipp/" name="Prof. Dr. Philipp Baumann" class="accordion"%})</li>
                     <li class="accordion-list-item">Digital Support for Legal Users in Specialized Legal Domains—Legal and Application-related Requirements (SNSF project funding, in collaboration with {% include links/external.html url="https://www.civpro.unibe.ch/ueber_uns/personen/prof_dr_eichel_florian/index_ger.html" name="Prof. Dr. Florian Eichel" class="accordion"%})</li>
+                    <li class="accordion-list-item">Debunking a Data-driven World (funded by BeLEARN, in collaboration with {% include links/external.html url="https://www.bfh.ch/de/ueber-die-bfh/personen/ruhpw6txjfpd/" name="Prof. Dr. Ferdinand Thies" class="accordion"%})</li>
                 </ul>
             </div>
         </div>
